@@ -2,6 +2,7 @@
 
 exports[`Button #accessibleLabel 1`] = `
 <a
+  aria-haspopup={null}
   className=" "
   href="#"
   onClick={[Function]}
@@ -18,6 +19,7 @@ exports[`Button #accessibleLabel 1`] = `
 
 exports[`Button #children 1`] = `
 <a
+  aria-haspopup={null}
   className=" "
   href="#"
   onClick={[Function]}
@@ -28,8 +30,20 @@ exports[`Button #children 1`] = `
 </a>
 `;
 
+exports[`Button #dialogTrigger 1`] = `
+<a
+  aria-haspopup="dialog"
+  className=" "
+  href="#"
+  onClick={[Function]}
+  rel={null}
+  target={null}
+/>
+`;
+
 exports[`Button #icon 1`] = `
 <a
+  aria-haspopup={null}
   className=" icon icon-test-icon"
   href="#"
   onClick={[Function]}
@@ -40,6 +54,7 @@ exports[`Button #icon 1`] = `
 
 exports[`Button #icon changes with #isLoading 1`] = `
 <a
+  aria-haspopup={null}
   className=" icon icon-spinner"
   href="#"
   onClick={[Function]}
@@ -50,6 +65,7 @@ exports[`Button #icon changes with #isLoading 1`] = `
 
 exports[`Button #multiple icons 1`] = `
 <a
+  aria-haspopup={null}
   className=" icon icon-test-icon icon-secondary-icon"
   href="#"
   onClick={[Function]}
@@ -60,6 +76,7 @@ exports[`Button #multiple icons 1`] = `
 
 exports[`Button #target 1`] = `
 <a
+  aria-haspopup={null}
   className=" "
   href="#"
   onClick={[Function]}
@@ -70,6 +87,7 @@ exports[`Button #target 1`] = `
 
 exports[`Button basic 1`] = `
 <a
+  aria-haspopup={null}
   className=" "
   href="#"
   onClick={[Function]}
